--- a/robot_patrol/CMakeLists.txt
+++ b/robot_patrol/CMakeLists.txt
@@ -43,9 +43,13 @@ ament_target_dependencies(patrolling_node rclcpp std_msgs geometry_msgs nav_msgs
 #cp6
 add_executable(direction_service_node src/direction_service.cpp)
 ament_target_dependencies(direction_service_node rclcpp std_msgs geometry_msgs nav_msgs sensor_msgs tf2 custom_interface)
+add_executable(test_service_node src/test_service.cpp)
+ament_target_dependencies(test_service_node rclcpp std_msgs geometry_msgs nav_msgs sensor_msgs tf2 custom_interface)
+
 install(TARGETS
    patrolling_node
    direction_service_node
+   test_service_node
    DESTINATION lib/${PROJECT_NAME}
 )
 
