--- a/custom_interface/CMakeLists.txt
+++ b/custom_interface/CMakeLists.txt
@@ -19,14 +19,15 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
 find_package(action_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/GetDirection.srv"
   "action/GoToPose.action"
+  DEPENDENCIES std_msgs sensor_msgs nav_msgs
 )
 
 if(BUILD_TESTING)
