--- a/robot_patrol/package.xml
+++ b/robot_patrol/package.xml
@@ -15,7 +15,7 @@
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>tf2</depend>
-  <depend>services_quiz_srv</depend>
+  <depend>custom_interface</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
